fix: spacing in `test-credentials`

--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -211,3 +211,8 @@ select
 
 .delete
   margin-left: 20px
+
+.form-spacing
+  input,button
+    margin-top: 10px
+  
